# MFS

./: .gitignore  readme.md
for_deploy/fsd/: fsd.cfg  run.sh
for_deploy/fsd/ssl/: dhp.pem  server.crt  server.csr  server.key
fsd/: CMakeLists.txt  main.cpp
fsd/cmake/modules/: GetGitVersion.cmake
fsd/inc/: dbconfig.cpp  dbconfig.h  def.h.in  fn.cpp  fn.h
